test-data/unit/check-function-always-true.test
[case testFunctionAlwaysTrue]
# flags: --python-version 3.6
def f(x: int) -> str: pass

if f:
    pass

[case testFunctionAlwaysTrue2]
# flags: --python-version 3.6
def f(x: int) -> str: pass

my_var = f

if my_var:
    pass

[case testFunctionAlwaysTrue5]
# flags: --python-version 3.6
def f(x: int) -> str: pass

def callable():
    return f

if callable(): # E: Function "callable" could always be true in boolean context
    pass


